--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
     <footer>
       <div class="footer-content">
   <div class="logo-address">
-    <a href="./index.html">
+    <a class="logo-link" href="./index.html">
       <span class="logo"
         >Web
         <span class="studio-white">Studio</span>
@@ -160,12 +160,12 @@
     </a>
     <address >
       <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
-      <br />
+      <!-- <br /> -->
 
       <a class="tel-email" href="mailto:info@example.com"
         >info@example.com</a
       >
-      <br />
+      <!-- <br /> -->
       <a class="tel-email" href="tel:+380991111111">+380991111111</a>
     </address>
   </div>
@@ -211,7 +211,6 @@
 
   <div class="footer-subscribe">
     <b class="join">Подпишитесь на рассылку</b>
-    <br />
     <div class="join-form">
       <input class="email-footer" type="email" placeholder="E-mail" />
     <button class="button-join">          
