--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           
             
               <section class="section-hero">
-                <div class="overlay"><h1 class="hero-title ">
+                <div class="overlay-image"><h1 class="hero-title ">
                   эффективные решения <br />
                   для вашего бизнеса
                 </h1>
