--- a/portfolio.html
+++ b/portfolio.html
@@ -81,9 +81,16 @@
             <ul class="list-portfolio">
               <li class="portfolio-item">
                 <a href="">
+                <div class="overlay">
                   <img src="./img/portfolio1.jpg" width="378" alt="portfolio-image">
+                  <p class="content-text">Технокряк это современная площадка распространения коронавируса.
+                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+                <div class="block">
                   <h3 class="portfolio-heading">Технокряк</h3>
                   <p class="port-text">Веб-сайт</p>
+                </div>
                 </a>
               </li>
               <li class="portfolio-item">
