--- a/portfolio.html
+++ b/portfolio.html
@@ -94,59 +94,119 @@
                 </a>
               </li>
               <li class="portfolio-item">
-                <a href=""
-                  ><img src="./img/sport.jpg" alt="Sport" />
+                <a href="">
+                  <div class="overlay">
+                  <img src="./img/sport.jpg" alt="Sport" />
+                  <p class="content-text">Технокряк это современная площадка распространения коронавируса.
+                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+                <div class="block">
                   <h3  class="portfolio-heading">Постер New Orlean vs Golden Stars</h3>
-                  <p class="port-text">Дизайн</p></a
+                  <p class="port-text">Дизайн</p>
+                  </div></a
                 >
               </li>
               <li class="portfolio-item">
                 <a href=""
-                  ><img src="./img/restaurant.jpg" alt="Seafood" />
+                  >
+                  <div class="overlay"><img src="./img/restaurant.jpg" alt="Seafood" />
+                  <p class="content-text">Технокряк это современная площадка распространения коронавируса.
+                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+                <div class="block">
                   <h3  class="portfolio-heading">Ресторан Seafood</h3>
-                  <p class="port-text">Приложение</p></a
+                  <p class="port-text">Приложение</p>
+                </div> 
+                </a
                 >
               </li>
               <li class="portfolio-item">
                 <a href="">
-                  <img src="./img/headset.jpg"  alt="headset" />
-                  <h3  class="portfolio-heading">Проект Prime</h3>
-                  <p class="port-text">Маркетинг</p></a
+                  <div class="overlay">
+                    <img src="./img/headset.jpg"  alt="headset" />
+                    <p class="content-text">Технокряк это современная площадка распространения коронавируса.
+                      Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    </p>
+                   
+                  </div>
+                  <div class="block">
+                    <h3  class="portfolio-heading">Проект Prime</h3>
+                  <p class="port-text">Маркетинг</p>
+                  </div>
+                  </a
                 >
               </li>
               <li class="portfolio-item">
                 <a href="">
-                  <img src="./img/boxes.jpg" alt="boxes" />
-                  <h3  class="portfolio-heading">Проект Boxes</h3>
+                  <div class="overlay">
+                    <img src="./img/boxes.jpg" alt="boxes" />
+                  <p class="content-text">Технокряк это современная площадка распространения коронавируса.
+                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                  </div>
+                  <div class="block">
+                    <h3  class="portfolio-heading">Проект Boxes</h3>
                   <p  class="port-text">Приложение</p>
+                  </div>
+
                 </a>
               </li>
               <li class="portfolio-item">
                 <a href="">
-                  <img src="./img/screen.jpg"  alt="screen" />
-                  <h3  class="portfolio-heading">Inspiration has no Borders</h3>
+                  <div class="overlay">
+                    <img src="./img/screen.jpg"  alt="screen" />
+                  <p class="content-text">Технокряк это современная площадка распространения коронавируса.
+                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                  </div>
+                  <div class="block">
+                    <h3  class="portfolio-heading">Inspiration has no Borders</h3>
                   <p  class="port-text">Веб-сайт</p>
+                  </div>
                 </a>
               </li>
               <li class="portfolio-item">
                 <a href="">
-                  <img src="./img/img7.jpg" alt="magazines" />
+                  <div class="overlay">
+                    <img src="./img/img7.jpg" alt="magazines" />
+                  <p class="content-text">Технокряк это современная площадка распространения коронавируса.
+                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                  </div>
+                 <div class="block">
                   <h3  class="portfolio-heading">Издание Limited Edition</h3>
                   <p  class="port-text">Дизайн</p>
+                 </div>
                 </a>
               </li>
               <li class="portfolio-item">
                 <a href="">
-                  <img src="./img/project-lab.jpg"  alt="project-lab" />
-                  <h3  class="portfolio-heading">Проект LAB</h3>
+                  <div class="overlay">
+                    <img src="./img/project-lab.jpg"  alt="project-lab" />
+                  <p class="content-text">Технокряк это современная площадка распространения коронавируса.
+                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                  </div>
+                  <div class="block">
+                    <h3  class="portfolio-heading">Проект LAB</h3>
                   <p  class="port-text">Маркетинг</p>
+                  </div>
                 </a>
               </li>
               <li class="portfolio-item">
                 <a href="">
-                  <img src="./img/lap-top.jpg" alt="lap-top" />
-                  <h3  class="portfolio-heading">Growing Business</h3>
+                  <div class="overlay">
+                    <img src="./img/lap-top.jpg" alt="lap-top" />
+                  <p class="content-text">Технокряк это современная площадка распространения коронавируса.
+                    Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                  </div>
+                  <div class="block">
+                    <h3  class="portfolio-heading">Growing Business</h3>
                   <p class="port-text">Маркетинг</p>
+                  </div>
                 </a>
               </li>
             </ul>
