--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
         
           <ul class="site-nav">
             <li class="item-nav"><a class="nav-option" href="./index.html">Студия</a></li>
-            <li class="item-nav"><a class="nav-option" href="./portfolio.html">Портфолио</a></li>
+            <li class="item-nav"><a class="nav-option current" href="./portfolio.html">Портфолио</a></li>
             <li class="item-nav"><a class="nav-option" href="">Контакты</a></li>
           </ul>
           </nav>
