--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
               <li class="portfolio-item">
                 <a href="">
                 <div class="overlay">
-                  <img src="./img/portfolio1.jpg" width="378" alt="portfolio-image">
+                  <img class="image-portfolio" src="./img/portfolio1.jpg" width="370" alt="portfolio-image">
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -96,7 +96,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                  <img src="./img/sport.jpg" alt="Sport" />
+                  <img class="image-portfolio"  src="./img/sport.jpg" width="370" alt="Sport" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -110,7 +110,8 @@
               <li class="portfolio-item">
                 <a href=""
                   >
-                  <div class="overlay"><img src="./img/restaurant.jpg" alt="Seafood" />
+                  <div class="overlay">
+                    <img class="image-portfolio"  src="./img/restaurant.jpg" width="370" alt="Seafood" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -125,7 +126,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img src="./img/headset.jpg"  alt="headset" />
+                    <img class="image-portfolio"  src="./img/headset.jpg" width="370"  alt="headset" />
                     <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                       Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
@@ -141,7 +142,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img src="./img/boxes.jpg" alt="boxes" />
+                    <img  class="image-portfolio" src="./img/boxes.jpg" width="370" alt="boxes" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -156,7 +157,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img src="./img/screen.jpg"  alt="screen" />
+                    <img  class="image-portfolio" src="./img/screen.jpg" width="370" alt="screen" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -170,7 +171,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img src="./img/img7.jpg" alt="magazines" />
+                    <img  class="image-portfolio" src="./img/img7.jpg" width="370" alt="magazines" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -184,7 +185,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img src="./img/project-lab.jpg"  alt="project-lab" />
+                    <img  class="image-portfolio" src="./img/project-lab.jpg" width="370" alt="project-lab" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -198,7 +199,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img src="./img/lap-top.jpg" alt="lap-top" />
+                    <img  class="image-portfolio" src="./img/lap-top.jpg" width="370"   alt="lap-top" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
