--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                  <img class="image-portfolio"  src="./img/sport.jpg" width="370" alt="Sport" />
+                  <img class="image-portfolio"  src="./img/portfolio2.jpg" width="370" alt="Sport" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -111,7 +111,7 @@
                 <a href=""
                   >
                   <div class="overlay">
-                    <img class="image-portfolio"  src="./img/restaurant.jpg" width="370" alt="Seafood" />
+                    <img class="image-portfolio"  src="./img/portfolio3.jpg" width="370" alt="Seafood" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -126,7 +126,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img class="image-portfolio"  src="./img/headset.jpg" width="370"  alt="headset" />
+                    <img class="image-portfolio"  src="./img/portfolio4.jpg" width="370"  alt="headset" />
                     <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                       Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                     </p>
@@ -142,7 +142,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img  class="image-portfolio" src="./img/boxes.jpg" width="370" alt="boxes" />
+                    <img  class="image-portfolio" src="./img/portfolio5.jpg" width="370" alt="boxes" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -157,7 +157,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img  class="image-portfolio" src="./img/screen.jpg" width="370" alt="screen" />
+                    <img  class="image-portfolio" src="./img/portfolio6.jpg" width="370" alt="screen" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -171,7 +171,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img  class="image-portfolio" src="./img/img7.jpg" width="370" alt="magazines" />
+                    <img  class="image-portfolio" src="./img/portfolio7.jpg" width="370" alt="magazines" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -185,7 +185,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img  class="image-portfolio" src="./img/project-lab.jpg" width="370" alt="project-lab" />
+                    <img  class="image-portfolio" src="./img/portfolio8.jpg" width="370" alt="project-lab" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
@@ -199,7 +199,7 @@
               <li class="portfolio-item">
                 <a href="">
                   <div class="overlay">
-                    <img  class="image-portfolio" src="./img/lap-top.jpg" width="370"   alt="lap-top" />
+                    <img  class="image-portfolio" src="./img/portfolio9.jpg" width="370"   alt="lap-top" />
                   <p class="content-text">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
