--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
                   </p>
                 </div>
                 <div class="block">
-                  <h3  class="portfolio-heading">Постер New Orlean vs Golden Stars</h3>
+                  <h3  class="portfolio-heading">Постер New Orlean vs Golden Star</h3>
                   <p class="port-text">Дизайн</p>
                   </div></a
                 >
